Last modified: $Date$
=============================================================

2004-11-12	assarbad
	* Coloring for compressed and encrypted items spans the
	  full row (for list control in another state than "Full
	  row select" the style needs to be decided, yet).
	* Renamed "Table Of Contents.hhc" to toc.hhc, as Linux
	  CVS cannot handle filenames with blanks in them.

2004-11-07	assarbad/bseifert
        * French part for setup.rc
        * Minor bugfix concerning "follow junction points"
        * Using compressed file size as reference now. This includes
          compressed and sparse files. A wrapper makes this transparent
          for the caller.
        * Compressed files/folders are now shown by default in blue,
          encrypted files/folders are shown by default in green.
          These settings can be altered by modifying the two
          REG_BINARY values "AltColor" (for compressed) and
          "AltEncryptionColor" (for encrypted) under the key:
          
          HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer

          This mimics the behavior of the Windows XP explorer.

2004-11-06	assarbad
        * Added the CVS-tags for Date and History whereever appropriate.
          (already yesterday)
        * Sam from the Ultr@VNC [ultravnc.sf.net] project volunteered to
          translate the missing parts to French. Still necessary to check
          wether the design is broken.
        * Fixed the bug with ampersands. If file or directory names have an
          ampersand they would show with underbar under the character right
          to the ampersand. This is similar to the behavior of accelerators
          in Windows dialogs. Just added DT_NOPREFX to all DrawText()
          instances.

2004-11-02	assarbad
        * Replaced the custom icon for junction points by code to greenify
          the folder image. Thus junction points are now represented by green
          folder icons.