@@ -8,6 +8,9 @@ Last modified: $Date$
 	  row select" the style needs to be decided, yet).
 	* Renamed "Table Of Contents.hhc" to toc.hhc, as Linux
 	  CVS cannot handle filenames with blanks in them.
+	* Implemented ExplorerStyle option which will not be
+	  accessible through the options dialog.
+	  It handles where the context menu is being shown.
 
 2004-11-07	assarbad/bseifert
         * French part for setup.rc
